Update. Java 21 & SpringBoot 3.1.4 & code style improvements